# rust-raytracer

./: Cargo.toml  README.md
benches/: ppm_benchmark.rs  sphere_benchmark.rs
src/: camera.rs  canvas.rs  color.rs  float.rs  intersection.rs  lib.rs  light.rs  main.rs  material.rs  matrix.rs  ray.rs  sphere.rs  transform.rs  transformation.rs  tuple.rs  utils.rs  world.rs
