[package]
name = "rust_raytracer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.11"
indicatif = "0.16.2"
itertools = "0.10.1"
rayon = "1.5"

[dev-dependencies]
criterion = "0.3"
rand = "0.8.4"

[[bench]]
name = "ppm_benchmark"
harness = false

[[bench]]
name = "sphere_benchmark"
harness = false
